--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,11 +7,5 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.h2.console.settings.web-allow-others=false
-spring.h2.console.settings.trace=false
-
+spring.jpa.hibernate.ddl-auto=none
 server.port=8081
