--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=false
 spring.h2.console.settings.trace=false
 
-
+spring.banner.location=classpath:banner.txt
 server.port=8081
